# codenames-embeddings-explorer

./: .gitignore  README.md  app.py  claude.md  pyproject.toml
Data/: codenames_words.txt  common_english_words.txt
Scripts/: construct_embeddings.py  find_best_word.py  validate_data.py
